<resources>
    <string name="app_name">Plagiarist</string>
    <string name="inituser">a3668f0afac72ca3f6c1697d29e0e1bb1fef4ab0285319b95ac39fa42c38d05f</string>
    <string name="uid">14561319</string>
    <string name="load_video">Load Video</string>
    <string name="search_users_ids">Search</string>
    <string name="user_id_input_hint">Input User ID Here</string>
    <string name="keyword_input_hint">Input Your Keyword for Searching Users</string>
    <string name="show_app_names">Get Installed Apps</string>
    <string name="tiktok_proxy">TikTok Proxy</string>
    <string name="show_apps">Installed Apps</string>
    <string name="code_hiding">Code Hiding</string>
    <string name="functionality_borrowing">Functionality Borrowing</string>
    <string name="list_desc">Package Name| Version Code| Version Name</string>
    <string name="message_input_hint">Input Your Message</string>
    <string name="phone_number_hint">Phone No.</string>
    <string name="get_imei">Fill Message with IMEI</string>
    <string name="send_msg">Send</string>
    <string name="load_image">Load Image</string>
    <string name="spot_face">Locate Face</string>
    <string name="anti_theft">Anti-theft</string>
</resources>
