<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodeHidingActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/imei_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_imei"
        android:onClick="onGetImei"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textMultiLine"
        android:hint="@string/message_input_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imei_btn"/>

    <android.support.v7.widget.AppCompatButton
        android:onClick="onSend"
        android:text="@string/send_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/message_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phone_number_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number_hint"
        app:layout_constraintTop_toBottomOf="@+id/message_text"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>